--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,3 @@
-#Ignore Files
-### Sensitive Information ###
-src/main/resources/application.properties
-### .gitignore File ###
-.gitignore
-
-#Ignore Folder/Files
-### .mvn Folders/Files ###
-.mvn
-mvnw
-mvnw.cmd
-
-### beans.xml copy from NorthwindTraders Intial Spring Exercise ###
-src/main/resources/beans.csv
-
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
@@ -46,3 +31,9 @@ build/
 
 ### VS Code ###
 .vscode/
+
+#Ignore Folders and Files
+### Sensitive Information ###
+src/main/resources/application.properties
+### beans.xml copy from NorthwindTraders Intial Spring Exercise ###
+src/main/resources/beans.csv
