--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,6 @@ build/
 
 #Ignore Folders and Files
 ### Sensitive Information ###
-src/main/resources/*
-src/main/resources/application.properties
+application.properties
 ### beans.xml copy from NorthwindTraders Intial Spring Exercise ###
-src/main/resources/beans.csv
+beans.csv
